tests/fixtures/invalid/divmod_list_int.py
# Cannot call divmod() with List[int], Int
x = divmod([1, 2, 3], 1)
